--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,4 +64,9 @@ features = ["async"]
 opt-level = "s"
 
 [profile.release]
-debug = 2
+lto = true
+opt-level = "s"
+incremental = false
+codegen-units = 1
+# note: debug = true is okay - debuginfo isn't flashed to the device!
+debug = true
